--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,158 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header {
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(197, 101, 245);
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.header-logo {
+  background-image: url("./logo.png");
+  background-size: 50px 50px;
+  height: 50px;
+  width: 50px;
+  margin: 10px 20px 10px 50px;
+}
+
+.header-repo {
+  margin-right: 50px;
+  font-size: 20px;
+  color: rgb(7, 4, 53);
+  font-family: initial;
+}
+
+.header-content {
+  font-size: 30px;
+  color: rgb(7, 4, 53);
+  font-family: initial;
+}
+
+footer {
+  flex: 0 0 auto;
+  height: 70px;
+  background-color: rgb(197, 101, 245);
+}
+
+.year {
+  text-align: end;
+  padding-right: 20px;
+  padding-top: 23px;
+}
+
+.main {
+  flex: 1 0 auto;
+  position: relative;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  margin: 20px 20px 0px 20px;
+}
+
+.search__input {
+  width: 80%;
+  height: 30px;
+  border: 1px solid rgb(241, 219, 240);
+  border-radius: 5px;
+  margin-right: 20px;
+}
+
+.search__button {
+  width: 70px;
+  height: 34px;
+  border: 1px solid rgb(241, 219, 240);
+  border-radius: 5px;
+}
+
+.search-type{
+  display: flex;
+  align-items: center;
+  margin: 20px 20px 0px 20px;
+}
+
+.search-type__input {
+  margin-right: 50px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
+}
+
+.card {
+  background-color: rgb(252, 241, 251);
+  height: 455px;
+  width: 300px;
+  border: 2px solid black;
+  vertical-align: middle;
+  margin: 10px;
+}
+
+.card__title {
+  text-align: center;
+}
+
+.card-poster__image {
+  height: 400px;
+  width: 300px;
+}
+
+.card__information {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 5px 10px 5px;
+}
+
+.wave {
+  width: 200px;
+  height: 130px;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  --delay: 1s;
+}
+
+.wave__item {
+  width: 15px;
+  height: 100%;
+  background-color: rgb(238, 52, 244);
+  animation: wave 1s ease-in-out infinite;
+}
+
+.wave__item:nth-child(2) {
+  animation-delay: calc(var(--delay)/10);
+}
+
+.wave__item:nth-child(2) {
+  animation-delay: calc(var(--delay)/10*2);
+}
+
+.wave__item:nth-child(3) {
+  animation-delay: calc(var(--delay)/10*3);
+}
+
+.wave__item:nth-child(4) {
+  animation-delay: calc(var(--delay)/10*4);
+}
+
+.wave__item:nth-child(5) {
+  animation-delay: calc(var(--delay)/10*5);
+}
+
+@keyframes wave {
+  25% {
+    transform: scaleY(2);
+  }
+  50% {
+    transform: scaleY(1);
+  }
+}
